--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "husky": "^8.0.3",
     "jest": "^29.6.3",
+    "lint-staged": "^15.2.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
