--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeContinuousIntegration",
+  "name": "react-native-continuous-integration",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,8 +24,11 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "jest": "^29.6.3",
     "lint-staged": "^15.2.0",
